# swimchain

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PROCESS.md  GENESIS_IDENTITY.md  GETTING_STARTED.md  GLOSSARY.md  LICENSE  MARKETING.md  PLAN_MILESTONE_1.3.md  PROJECTIONS.md  README.md  ROADMAP.md  THESIS_01_EXCLUSION.md  THESIS_02_FRICTION.md  THESIS_03_FORKS.md  THESIS_04_SAFETY.md  THESIS_05_GROWTH.md  THESIS_06_DECAY.md  THESIS_07_PSEUDONYMITY.md  THESIS_08_SPONSORSHIP_TREES.md  THESIS_09_HOSTING_AS_WORK.md  THESIS_10_ATTESTATION_DECAY.md  THESIS_TOPICS.md  THREAT_MODEL.md  USER_PROFILES.md  VISION.md  WORKSTREAMS.md  action-log.jsonl  check-content.sh  post_parity_dag.py  post_qa_study_dag.py  rustfmt.toml  start-alpha.sh  start-genesis-and-test.sh  start-genesis.sh  start-test-nodes.sh
.daemon-pids/: browser-session.json  forum-client.pid  node.pid
.github/: CODEOWNERS
analytics-client/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
archiver-client/: index.html  package.json  vite.config.js  vite.config.ts  vitest.config.ts
benches/: README.md  benchmarks.rs  branching.rs  cache_benchmark.rs  chunking.rs  decay_simulation.rs  mobile_pow.rs  mobile_storage.rs  mobile_sync.rs  multi_node.rs  rpc_scenarios.rs  storage_benchmarks.rs  sync.rs
bridge-client/: .eslintrc.cjs  index.html  package.json  vite.config.js  vite.config.ts  vitest.config.ts
chat-client/: DESIGN.md  PLAN.md  index.html  package.json  vite.config.js  vite.config.ts
chess-client/: .env.production  index.html  package.json  vite.config.ts
debug-dashboard/: index.html  proxy.js
desktop-app/: README.md  build.ps1  build.sh  index.html  package.json
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: app_manifest.rs  main.rs  nav.rs  node_manager.rs  registry.rs  supervisor.rs
docs/: AGENT_TESTING_GUIDE.md  APP_NAMESPACED_SPACES.md  ARCHITECTURE_CONCERNS.md  BLOCK_FORMATION.md  BRANCH_SELECTIVE_SYNC.md  CLIENT_DESIGN.md  COMPETITIVE_ANALYSIS.md  CONSENSUS_ACTION_LOSS.md  CROSS_CLIENT_AUDIT.md  DESIGN_THREADS_2026-07-15.md  DETERMINISTIC_BLOCK_LEADER.md  E2E_INTEGRATION_TESTS.md  FAILURE_MODES.md  GAMES_ON_SWIMCHAIN.md  IMPLEMENTATION_DECISIONS.md  IMPL_BRANCH_SYNC.md  INTEGRATION_ROADMAP.md  LEGAL_POSTURE.md  MAINNET_LAUNCH_READINESS.md  MASTER_FEATURES.md  NEXT_FIXES.md  NOT_IMPLEMENTED_SWEEP.md  OUTSTANDING_ACTIONS.md  PENDING_INTEGRATIONS.md  PIPELINE_QUEUE.md  PRIVATE_SPACES.md  RECONCILIATION_ROADMAP.md  STATE_OF_SWIMCHAIN.md  TESTNET_DEPLOY_RUNBOOK.md  VISION_PARITY_AUDIT.md  analytics-client.md  anti-abuse-integration.md  api-reference.md  archiver-client.md  attestation-security.md  auto-fracture.md  availability-announcements.md  background-tasks.md  benefit-integration.md  block-production.md  (+73 more)
examples/: block_dump.rs  chain_diag.rs  fork_diag.rs  index_diag.rs  pool_benchmark.rs  storage_simulation.rs
feed-client/: DESIGN.md  PLAN.md  index.html  package.json  vite.config.js  vite.config.ts
forum-client/: .env.regtest  full-flow-test.cjs  index.html  package.json  quick-test.cjs  setup-test-data.cjs  simple-sponsorship-test.cjs  sponsorship-e2e-test.cjs  sponsorship-e2e-v2.cjs  vite.config.js  vite.config.ts
launcher-apps/: .gitignore
launcher-apps/app-shell/src-tauri/: Cargo.toml  tauri.conf.json
launcher-apps/app-shell/src-tauri/src/: main.rs  manifest.rs  rpc_handoff.rs
mobile-app/: .gitignore  README.md  index.html  package.json  vite.config.ts
mobile-app/src-tauri/: Cargo.toml  tauri.conf.json
mobile-app/src-tauri/src/: lib.rs  main.rs  node_host.rs
mobile-client/: App.tsx  README.md  app.json  babel.config.js  index.js  metro.config.js  package.json  pnpm-lock.yaml  tsconfig.json
mockups/: index.html  serve.bat  serve.sh
plans/: MILESTONE_6.3_PLAN.md
reef-client/: .env.production  .gitignore  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
research/: RESEARCH_01_SYBIL_RESISTANCE.md  RESEARCH_02_BOOTSTRAP.md  RESEARCH_03_LIGHT_CLIENTS.md  RESEARCH_04_MODERATION_PATTERNS.md  RESEARCH_05_LEGAL.md  RESEARCH_06_HOSTING_POW_ECONOMICS.md  RESEARCH_07_SPONSORSHIP_ECONOMICS.md  RESEARCH_08_ATTESTATION_MECHANISMS.md  SYNTHESIS_04_MODERATION_PATTERNS.json  SYNTHESIS_08_ATTESTATION_MECHANISMS.md
scripts/: browser-control.js  bvt.sh  bvt_e2e_sponsorship.py  chat-api.js  content-seeder.sh  daemon-control.js  dashboard.py  debug-forum-client.sh  debug-space-view.js  deploy-to-seeds.sh  deploy-web-clients.sh  document-feature.js  e2e-content-flow.sh  feature-team.js  find_viable_params.sh  generate-completions.sh  generate-man-pages.rs  list-testnet-nodes.sh  network-status.sh  node-automator.py  node-manager.sh  package.json  quick-sync-test.sh  run-clients.sh  run-e2e-tests.sh  run-testnet-e2e.sh  simulate_content_storage.sh  simulate_content_storage_v2.sh  simulate_content_storage_v3.sh  snapshot.py  submit-sponsorship-pipeline.js  take-screenshots.js  test-4node-chain.sh  test-forum-client.js  test-rpc-client.js  test-scale-network.sh  test-two-node-sync.sh  testnet-e2e.sh  testnet-edge-cases.sh
search-client/: DESIGN.md  index.html  package.json  vite.config.js  vite.config.ts
simulations/: Cargo.toml  SIMULATION_RESULTS.md  availability_simulation.rs  extended_scenarios.rs  network_simulation.rs  quick_scenarios.rs  simulation_results.txt
specs/: SPEC_01_IDENTITY.md  SPEC_02_CONTENT_DECAY.md  SPEC_03_PROOF_OF_WORK.md  SPEC_04_SPACES.md  (+10 more)
swimchain-core/: Cargo.toml
swimchain-core/src/: behavioral.rs  forkchoice.rs  fracture.rs  frequency.rs  lib.rs
swimchain-wasm/: Cargo.toml
swimchain-wasm/src/: crypto.rs  decay.rs  error.rs  identity.rs  lib.rs  pow.rs  sims.rs
tools/dns-seeder/: Cargo.toml
tools/dns-seeder/src/: main.rs
trench-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
trench-client/src-tauri/icons/: icon.icns
trench-client/src-tauri/src/: main.rs  node_manager.rs  rpc_handoff.rs
(+1871 files in other folders)
