[workspace]

[package]
name = "swimchain-desktop"
version = "0.1.0"
description = "Swimchain Desktop - Decentralized social forum"
authors = ["Swimchain"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = "0.10"
hex = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
screenshots = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
