[workspace]

[package]
name = "swimchain-mobile"
version = "0.1.0"
description = "Swimchain Mobile - in-process node + feed client"
edition = "2021"

[lib]
name = "swimchain_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
base64 = "0.22"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
swimchain = { path = "../.." }

# Android-only: fire an ACTION_VIEW intent via JNI to open URLs in the system
# browser. Avoids a Tauri plugin (whose Android AAR wouldn't link under our
# `gradlew … -x rustBuildArm64Release` build flow, crashing the app on init).
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
