[workspace]

[package]
name = "swimchain-dns-seeder"
version = "0.1.0"
edition = "2021"
description = "DNS seeder for Swimchain network - crawls network and serves peer IPs via DNS"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
sha2 = "0.10.9"
