[workspace]

[package]
name = "the-trench"
version = "0.1.0"
description = "The Trench - a node-homestead game on Swimchain. Your node is your lantern."
authors = ["Swimchain"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = "0.10"
hex = "0.4"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
