[workspace]

[package]
name = "app-shell"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
base64 = "0.22"
dirs = "5"

[dev-dependencies]
tempfile = "3.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
